--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Itac</title>
+    <title>Рюкзак</title>
 </head>
 
 <body>
@@ -958,25 +958,6 @@
             <a href="#welcomePage" class="goUpBtn navLink">Наверх</a>
         </footer>
     </div>
-
-    <ul class="try">
-        <li class="">
-            <p>asd</p>
-            <p>asd</p>
-        </li>
-        <li class="">
-            <p>das</p>
-            <p>das</p>
-        </li>
-        <li class="">
-            <p>sad</p>
-            <p>sad</p>
-        </li>
-        <li class="">
-            <p>ads</p>
-            <p>ads</p>
-        </li>
-    </ul>
 
 
     <script src="js/jquery-3.4.1.min.js"></script>
