--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <a href="/"><img class="header__logo" src="./assets/logo.svg" alt="Логотип"></a>
                 </div>
 
-                <div class="d-flex justify-content-end align-items-center">
+                <div class="d-flex ml-auto align-items-center">
                     <a href="tel:+78001234567" class="tel">+7 800 123-45-67</a>
                     <a href="#" class="lkBtn text">Личный кабинет</a>
                     <svg class="burger" width="32" height="28" viewBox="0 0 32 28" fill="none" xmlns="http://www.w3.org/2000/svg">
