--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
         </div>
     </div>
 
+    <div onclick="forward(4)" class="mobNavFixed">
+        <img src="./assets/mobNavFixed.svg" alt="">
+    </div>
+
     <ul class="container mobMenuList">
         <li class="mobMenuList__item mainMenu">
             <ul class="pagesList">
