--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
             
             <ul class="row videoList d-flex flex-wrap">
                 <li class="video1">
-                    <iframe src="https://vk.com/video_ext.php?oid=47903010&id=456239209&hash=e4c09c3cbbaedaf2" frameborder="0" allowfullscreen autoplay="1" loop autoplay allowautoplay="true" allowautoplay></iframe>
+                    <iframe src="https://vk.com/video_ext.php?oid=-1672730&id=456240757&hash=455f28ff4094d3c5&autoplay" width="640" height="360" frameborder="0" allowfullscreen allow="autoplay"></iframe>
                     <p><a href="#" class="hashtag-nav">Евгения Павличенко</a></p>
                 </li>
                 
