--- a/index.html
+++ b/index.html
@@ -222,43 +222,43 @@
 
             <ul class="navList">
                 <li class="navListMenu__item">
-                    <a href="#header" class="hashtag-nav transBtn active">#Статьучастником</a>
+                    <a href="#header" class="hashtag-nav transBtn active mobNav">#Статьучастником</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#newLvl" class="hashtag-nav transBtn">#Новыйуровень</a>
+                    <a href="#newLvl" class="hashtag-nav transBtn mobNav">#Новыйуровень</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#community" class="hashtag-nav transBtn">#Комьюнити</a>
+                    <a href="#community" class="hashtag-nav transBtn mobNav">#Комьюнити</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#education" class="hashtag-nav transBtn">#Обучение</a>
+                    <a href="#education" class="hashtag-nav transBtn mobNav">#Обучение</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#allIn" class="hashtag-nav transBtn">#Всевключено</a>
+                    <a href="#allIn" class="hashtag-nav transBtn mobNav">#Всевключено</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#employment" class="hashtag-nav transBtn">#Трудоустройство</a>
+                    <a href="#employment" class="hashtag-nav transBtn mobNav">#Трудоустройство</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#roadMap" class="hashtag-nav transBtn">#Дорожнаякарта</a>
+                    <a href="#roadMap" class="hashtag-nav transBtn mobNav">#Дорожнаякарта</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#warranty" class="hashtag-nav transBtn">#Гарантии</a>
+                    <a href="#warranty" class="hashtag-nav transBtn mobNav">#Гарантии</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#reviews" class="hashtag-nav transBtn">#Отзывы</a>
+                    <a href="#reviews" class="hashtag-nav transBtn mobNav">#Отзывы</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#founders" class="hashtag-nav transBtn">#Основатели</a>
+                    <a href="#founders" class="hashtag-nav transBtn mobNav">#Основатели</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#features" class="hashtag-nav transBtn">#Особенности</a>
+                    <a href="#features" class="hashtag-nav transBtn mobNav">#Особенности</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#bonuses" class="hashtag-nav transBtn">#Бонусы</a>
+                    <a href="#bonuses" class="hashtag-nav transBtn mobNav">#Бонусы</a>
                 </li>
                 <li class="navListMenu__item">
-                    <a href="#price" class="hashtag-nav transBtn">#Цена</a>
+                    <a href="#price" class="hashtag-nav transBtn mobNav">#Цена</a>
                 </li>
             </ul>
         </li>
@@ -301,7 +301,7 @@
                                 <a href="#">Стать клиентом</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#">VIP</a>
+                                <a href="/vip/index.html">VIP</a>
                             </li>
                         </ul>
                     </nav>
