--- a/index.html
+++ b/index.html
@@ -122,31 +122,31 @@
             <h3 class="menuTitle">Наши курсы</h3>
             <ul class="coursesList">
                 <li class="coursesList__item">
-                    <a href="#">Лендинги</a>
+                    <a href="/vip/index.html">Лендинги</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Контекстная реклама</a>
+                    <a href="/vip/index.html">Контекстная реклама</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Таргетированная реклама Вконтакте</a>
+                    <a href="/vip/index.html">Таргетированная реклама Вконтакте</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Таргетированная реклама Facebook</a>
+                    <a href="/vip/index.html">Таргетированная реклама Facebook</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Запуск инфопродуктов</a>
+                    <a href="/vip/index.html">Запуск инфопродуктов</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Продающий текст</a>
+                    <a href="/vip/index.html">Продающий текст</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Ведение инстаграма</a>
+                    <a href="/vip/index.html">Ведение инстаграма</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Партнерские продажи</a>
+                    <a href="/vip/index.html">Партнерские продажи</a>
                 </li>
                 <li class="coursesList__item">
-                    <a href="#">Геймифицированные автоворонки</a>
+                    <a href="/vip/index.html">Геймифицированные автоворонки</a>
                 </li>
             </ul>
         </li>
