--- a/vip/index.html
+++ b/vip/index.html
@@ -133,22 +133,22 @@
     
                 <ul class="servicesList">
                     <li class="servicesList__item">
-                        <a href="#">Лендинги и сайты</a>
+                        <a href="../services/index.html">Лендинги и сайты</a>
                     </li>
                     <li class="servicesList__item">
-                        <a href="#">Контекстная реклама</a>
+                        <a href="../services/index.html">Контекстная реклама</a>
                     </li>
                     <li class="servicesList__item">
-                        <a href="#">Таргетированная реклама</a>
+                        <a href="../services/index.html">Таргетированная реклама</a>
                     </li>
                     <li class="servicesList__item">
-                        <a href="#">Запуск инфопродуктов</a>
+                        <a href="../services/index.html">Запуск инфопродуктов</a>
                     </li>
                     <li class="servicesList__item">
-                        <a href="#">Продвижение социальных сетей</a>
+                        <a href="../services/index.html">Продвижение социальных сетей</a>
                     </li>
                     <li class="servicesList__item">
-                        <a href="#">Автоворонки</a>
+                        <a href="../services/index.html">Автоворонки</a>
                     </li>
                 </ul>
             </li>
