--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,7 +117,7 @@
                 <div class="col-12 col-lg-6 info">
                     <h2 class="header2">Получите скидку 4%</h2>
                     <p class="header3">заказав расчёт стоимости и сроков сегодня </p>
-                    <p class="header4">Нажимая кнопку Вы даёте согласие  на обработку своих персональных данных согласно №152-ФЗ  о персональных данных </p>
+                    <p class="header4">Нажимая кнопку Вы даёте согласие на&nbspобработку своих персональных данных согласно №152-ФЗ о&nbspперсональных данных </p>
                 </div>
 
                 <form class="col-12 col-lg-6 col-xl-5">
@@ -125,7 +125,7 @@
                     <input type="text" class="telInput" placeholder="+7 (___) ___-__-__">
                     <div class="checkbox">
                         <input type="checkbox" id="discountCheckbox">
-                        <label for="discountCheckbox">Даю согласие на обработку своих  персональных данных согласно №152-ФЗ</label>
+                        <label for="discountCheckbox">Даю согласие на обработку своих персональных данных согласно №152-ФЗ</label>
                     </div>
                     <button type="submit"><p>Рассчитать стоимость <span>проекта</span></p></button>                
                 </form>
@@ -185,8 +185,8 @@
 
                         <div class="content">
                             <div class="name header2">Роман</div>
-                            <p class="review header4">Отличный загородный дом для круглогодичного проживания. Дизайн выполнен в нео стиле. Убранство - хайтек.
-                                Для любителей финского минимализма и единения с природой</p>
+                            <p class="review header4">Отличный загородный дом для&nbspкруглогодичного проживания. Дизайн выполнен в&nbspнео&nbspстиле. Убранство - хайтек.
+                                Для&nbspлюбителей финского минимализма и&nbspединения с&nbspприродой</p>
 
                             <div class="params">
                                 <div class="square">
@@ -248,8 +248,8 @@
 
                         <div class="content">
                             <div class="name header2">Роман</div>
-                            <p class="review header4">Отличный загородный дом для круглогодичного проживания. Дизайн выполнен в нео стиле. Убранство - хайтек.
-                                Для любителей финского минимализма и единения с природой</p>
+                            <p class="review header4">Отличный загородный дом для&nbspкруглогодичного проживания. Дизайн выполнен&nbspв&nbspнео стиле. Убранство&nbsp- хайтек.
+                                Для любителей финского минимализма и&nbspединения с&nbspприродой</p>
 
                             <div class="params">
                                 <div class="square">
@@ -399,7 +399,7 @@
                             </p>
 
                             <p class="header4 mb-20">
-                                мы даем для того, чтобы вам была дополнительная гарантия того, что в дом не нужно будет больше ничего вкладывать.
+                                мы даем для того, чтобы вам была дополнительная гарантия того, что в&nbspдом не&nbspнужно будет больше ничего вкладывать.
                             </p>
 
                             <p class="header3">
@@ -407,8 +407,8 @@
                             </p>
 
                             <p class="header4">
-                                Если что-то сломалось не по вине заказчика — какие-то технические или конструктивные решения не очень хорошо себя чувствуют через 10, 15, 20 или 25 лет.<br/> Приезжает наш технический специалист, оценивает ситуацию, делает экспертизу о проведенных работах, экспертизу эксплуатации и выявляет по какой причине это произошло. Мы устраняем неполадки для того, чтобы ситуация не усугублялось, для того, чтобы вы оставались в новом, качественном доме.<br/> 
-                                При правильной эксплуатации и при правильном строительстве — 25 лет это гарант того, что дом еще потом 75 — 100 лет  прослужит без проблем. 
+                                Если что-то сломалось не&nbspпо&nbspвине заказчика&nbsp— какие-то технические или&nbspконструктивные решения не&nbspочень хорошо себя чувствуют через 10, 15, 20 или&nbsp25 лет.<br/> Приезжает наш технический специалист, оценивает ситуацию, делает экспертизу о&nbspпроведенных работах, экспертизу эксплуатации и&nbspвыявляет по&nbspкакой причине это произошло. Мы устраняем неполадки для&nbspтого, чтобы ситуация не&nbspусугублялось, для&nbspтого, чтобы вы оставались в&nbspновом, качественном доме.<br/> 
+                                При правильной эксплуатации и&nbspпри правильном строительстве&nbsp— 25 лет это гарант того, что&nbspдом еще&nbspпотом 75&nbsp—&nbsp100&nbspлет прослужит без&nbspпроблем. 
                             </p>
                         </div>
                     </div>
@@ -490,7 +490,7 @@
                                 <p>до 15% <span class="header4">на мебель</span></p>
                                 <p>до 30%<br/><span class="header4">на ландшафтный дизайн</span></p>
                             </div>
-                            <p class="header4 more">*при заказе строительства под ключ</p>
+                            <p class="header4 more">*при заказе строительства под&nbspключ</p>
                         </div>
                     </li>
 
@@ -930,9 +930,9 @@
 
                 <ul class="premium__list">
                     <li class="header4">Кровля — мягкая, фальцевая, медная, ондулин, металлочерепица.</li>
-                    <li class="header4">Дом строится на основе каркаса, выполненного из строганных и обрезных досок. </li>
-                    <li class="header4">Отделка стен на выбор: вагонка, имтация бруса, планкен, сайдинг, ЦСП, ГКЛ, плитка, камень и т.п.</li>
-                    <li class="header4">Напольное покрытие из высокопрочных материалов.</li>
+                    <li class="header4">Дом строится на&nbspоснове каркаса, выполненного из&nbspстроганных и&nbspобрезных досок. </li>
+                    <li class="header4">Отделка стен на&nbspвыбор: вагонка, имтация бруса, планкен, сайдинг, ЦСП, ГКЛ, плитка, камень и&nbspт.п.</li>
+                    <li class="header4">Напольное покрытие из&nbspвысокопрочных материалов.</li>
                 </ul>
             </div>
         </div>
@@ -941,7 +941,7 @@
     <section class="buyNow">
         <div class="container">
             <div class="content">
-                <h2 class="header2">Переезжайте в ваш новый дом сейчас, а платите после</h2>
+                <h2 class="header2">Переезжайте в&nbspваш новый дом сейчас, а&nbspплатите после</h2>
 
                 <ul>
                     <li class="header3">Ипотека</li>
@@ -953,7 +953,7 @@
                     <div class="textBlock">
                         <p class="header2">Обмен</p>
                         <p class="header3">квартиры на дом</p>
-                        <p class="header4">Переезжайте<br/> в ваш новый дом сейчас!</p>
+                        <p class="header4">Переезжайте<br/> в&nbspваш новый дом сейчас!</p>
                         
                     </div>
                 </div>
@@ -966,12 +966,12 @@
     <section class="whyUs">
         <div class="container">
             <div class="row">
-                <h2 class="header2">Почему дома для&nbspкруглогодичного проживания следует&nbspзаказывать именно у нас?</h2>
+                <h2 class="header2">Почему дома для&nbspкруглогодичного проживания следует&nbspзаказывать именно у&nbspнас?</h2>
 
                 <div class="whyUsCard">
-                    <p class="header2">Вы выбираете участок, а мы его покупаем!</p>
+                    <p class="header2">Вы выбираете участок, а&nbspмы его&nbspпокупаем!</p>
                     <p class="header4">Мы получаем градостроительный план, разрешение на строительство, адресную справку, проводим регистрацию дома</p>
-                    <p class="header3">Перерегистрация на вас бесплатно!</p>
+                    <p class="header3">Перерегистрация на&nbspвас бесплатно!</p>
                 </div>
             </div>
         </div>
@@ -980,11 +980,11 @@
     <section class="about">
         <div class="aboutSide col-xl-6 col-lg-5">
             <div class="container">
-                <h3 class="header3">Мы знаем все узкие места малоэтажного строительства и умеем устранять проблемы до момента их появления</h3>
+                <h3 class="header3">Мы знаем все узкие места малоэтажного строительства и&nbspумеем устранять проблемы до&nbspмомента их&nbspпоявления</h3>
 
                 <div class="header4">
                     <p>Группа компаний Дом108 помимо каркасников использует <span>15 технологий построения домов</span></p>
-                    <p>Благодаря двадцатилетнему опыту работы были  взлёты и падения, оттачивание мастрества и освоение меняющихся трендов.</p>
+                    <p>Благодаря двадцатилетнему опыту работы были взлёты и&nbspпадения, оттачивание мастрества и&nbspосвоение меняющихся трендов.</p>
                 </div>
             </div>
         </div>
@@ -1150,7 +1150,7 @@
                         <input type="text" class="telInput" placeholder="+7 (___) ___-__-__">
                         <div class="checkbox">
                             <input type="checkbox" id="questionsCheckbox">
-                            <label for="questionsCheckbox">Даю согласие на обработку своих  персональных данных согласно №152-ФЗ</label>
+                            <label for="questionsCheckbox">Даю согласие на&nbspобработку своих персональных данных согласно №152-ФЗ</label>
                         </div>
                         <button type="submit" class="goBtn header3">Записаться</button>
                     </form>
