--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="fixedBlock">
         <img src="./assets/fixedPhone.svg" data-toggle="modal" data-target="#fixedModal" class="telBtn" alt="Записаться на консультацию">
-        <img src="./assets/fixedArrow.svg" class="transBtn upBtn" alt="Наверх">     
+        <img src="./assets/fixedArrow.svg" href="#welcomePage" class="transBtn upBtn" alt="Наверх">
     </div>
 
     <div class="modal fade" id="fixedModal" tabindex="-1" aria-labelledby="fixedModalLabel" aria-hidden="true">
@@ -52,7 +52,7 @@
     </div>
 
 
-    <section class="welcomePage">
+    <section class="welcomePage" id="welcomePage">
         <div class="forBg">
             <div class="container">
                 <div class="leftSide">
@@ -67,11 +67,11 @@
                 
                     <div class="container mobileWelcome">
                         <img src="./assets/mobileLogo.png" class="mobileLogo" alt="Логотип">
-                        <img src="./assets/mobileArrowBot.png" class="mobileArrowBot" alt="Вниз">
+                        <img src="./assets/mobileArrowBot.png" href="#firstToSee" class="transBtn mobileArrowBot" alt="Вниз">
                     </div>
     
                     <div class="content">
-                        <h1 class="header1">Каркасные экодома</h1>
+                        <h1 class="header1" id="firstToSee">Каркасные экодома</h1>
                         <p class="header3">для круглогодичного проживания за&nbspмесяц под&nbspключ <span>от&nbsp12 000 р/м2</span></p>
                         <p class="header4">Дышите чистым воздухом</p>
                         <div class="buttons">
