--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>KCF</title>
+    <title>DOM108</title>
 </head>
 <body>
     <div class="fixedBlock">
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="modal-body header4">
-                    <form>
+                    <form action="form_completed/index.html">
                         <div class="reqInputs">
                             <input type="text" placeholder="Ваше имя" required>
                             <input type="tel" class="telInput" placeholder="+7 (___) ___-__-__" required>
